--- a/signin.html
+++ b/signin.html
@@ -14,7 +14,7 @@
         <TD width="2%">
         </TD>
         <TD width="3%">
-            <a href="index.php"><img width="100%" src="images/logo.jpg" align="Left" id="logo"></a>
+            <a href="index.php"><img width="100%" src="images/logo.png" align="Left" id="logo"></a>
         </TD>
         <TD width="2%">
             
@@ -34,7 +34,7 @@
 </div>
                                                                   <!--do not touch-->
 
-<div class="main">
+<div class="main" id="main">
         <h1> Contributing Today <br> For Tomorrow  </h1><br><br>
         <h2> Sign In</h2> <br>
         <div class="altsign"><button>Google</button><br><br></div>
