--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
         <TD width="2%">
         </TD>
         <TD width="3%">
-            <a href="index.php"><img width="100%" src="images/logo.jpg" align="Left" id="logo"></a>
+            <a href="index.php"><img width="100%" src="images/logo.png" align="Left" id="logo"></a>
         </TD>
         <TD width="2%">
             
